fix server spacing

--- a/src/pages/docs/index.less
+++ b/src/pages/docs/index.less
@@ -302,6 +302,13 @@
   display: none;
 }
 
+// Server select
+@media (max-width: 460px) {
+  .swagger-ui .servers>label select {
+    max-width: 148px;
+  }
+}
+
 
 .swagger-ui section.models.is-open {
   padding: unset;
